# info-retrieval-project

./: .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  README.md  app.py  config.py  crawler.py  pyproject.toml
backend/model/: config.json
caddy/: .dockerignore  Caddyfile  Caddyfile.local  README.md
classification/: README.md  balanced_labels_posneg.csv  data_extractor.ipynb  dataaug.ipynb  label.csv  label_finegrained.csv  label_posneg.csv  output.csv  output.numbers  roberta_model_building.ipynb  test_balanced.csv  train.csv
classification/.ipynb_checkpoints/: data_extractor-checkpoint.ipynb
classification/fine_grained_classification/: finegrained.ipynb  finegrained_labels_processed.csv  label.csv
classification/fine_grained_classification/trained_model_finegrained/: config.json
indexing/: README.md  crawler.py  csvExtractor.py  data_extractor.ipynb  xmlExtractor.py  xmlExtractorNoURL.py
indexing/.ipynb_checkpoints/: data_extractor-checkpoint.ipynb
indexing/Dataset/2007/: 2007_acura_tl.xml  2007_audi_a3.xml  2007_bmw_z4.xml  2007_chevrolet_cobalt.xml  2007_chrysler_300.xml  2007_dodge_caliber.xml  2007_ford_f-150.xml  2007_gmc_envoy.xml  2007_honda_accord.xml  2007_honda_fit.xml  2007_honda_odyssey.xml  2007_hyundai_tiburon.xml  2007_kia_sorento.xml  2007_mazda_mazda3.xml  2007_mazda_mazda6.xml  (+6 more)
submission/: README.md
web-app/: Dockerfile  README.md  package-lock.json  package.json
web-app/src/: App.css  App.js  ListPage.js  Post.js  SearchBar.js  index.css  index.js  solrUpdate.js
(+42 files in other folders)
